--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "sigmahaus"
+name = "sigalg"
 version = "0.1.0"
 description = "later"
 readme = "README.md"
@@ -13,4 +13,7 @@ requires-python = ">=3.9"
 dependencies = ["numpy", "pandas", "matplotlib"]
 
 [project.urls]
-Homepage = "https://github.com/johnmyers/sigmahaus"
+Homepage = "https://github.com/johnmyers/sigalg"
+
+[tool.setuptools.packages.find]
+where = ["src"]
